Fixed spacing

--- a/src/main/resources/static/css/ratings.css
+++ b/src/main/resources/static/css/ratings.css
@@ -361,5 +361,5 @@ main {
 
 
 #your-listings-wrapper {
-  margin-left: 2rem;    
+  margin-left: 1.5rem;    
 }
